--- a/static/additional.css
+++ b/static/additional.css
@@ -1,6 +1,33 @@
 body {
   padding-top: 50px;
 }
-.markdown-body {
-  padding: 40px 80px;
+
+.homebg {
+  background: url('/static/mdcontent/galaxybannar.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 300px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.homejumbo {
+  margin-bottom: 0px;
+  height: 250px;
+  color: white;
+  text-shadow: black 0.3em 0.3em 0.3em;
+  background:transparent;
+}
+
+.iowabutton {
+  background-color:#FFE100;
+  position: relative;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  height: 100%;
+  width: auto;
+  overflow: visible;
 }
