--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>A Simple Markdown App</title>
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='additional.css') }}">
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='github-markdown.css') }}">
+    <title>{% block title %}{% endblock %}</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> -->
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='additional.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='mdcontent/favicon.ico') }}">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,26 +29,38 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Markdown App</a>
+          <!-- <a class="navbar-brand" href="/">Imaging the Universe</a> -->
+          <a class="navbar-brand" href="http://astro.physics.uiowa.edu/">UIowa Astro Portal</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             {% block navblock %}
             {% endblock %}
+            <li><a href="#"></a></li>
+            <li><a href="http://astro.physics.uiowa.edu/rigel/">Rigel</a></li>
+
           </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </nav>
-      
-      <div class=container>
-        {% block content %}{% endblock %}
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://www.physics.uiowa.edu/">Physics and Astronomy @</a></li>
+            <li><a href="http://www.uiowa.edu/" class="center-block" style="padding: 0px;">
+              <img class="img-rounded iowabutton" src="{{ url_for('static', filename='mdcontent/uiowadome.png') }}">
+            </a>
+          </li>
+        </ul>
+        </div><!--/.nav-collapse -->
       </div>
-      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-      <script type="text/javascript"
-      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-      </script>
-    </body>
-  </html>
+    </nav>
+    
+    <div class="container">
+      {% block content %}{% endblock %}
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript"
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript"
+    src="{{ url_for('static', filename='additional.js') }}"></script>
+  </body>
+</html>
